--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <h2>About</h2>
-  <h3 style = 'text-align:center;'><a href="/DOE_Overview_Presentation.html"> Course Overview Presentation </a></h3>
-  <p>This course was developed by analysts at TRAC Fort Leavenworth with assistance from the <a href = 'https://www.dscoe.org'>Data Science Center of Education (DSCOE)</a>and friends and peers throughout the Army analytic community.  It is intended to serve as a practical foundation in the statistical field of the design and analysis of experiments, specifically focused on supporting simulation development and analysis. It assumes basic familiarity with statistics and introduces programming in <a href = "https://www.r-project.org/about.html"><i>R</i></a>.  It is intended to be self paced, though organizations can work through it on a set schedule as desired.</p>
-<p><b>Contact:</b> Please contact us with questions, comments, concerns, ideas, or (analytic and intellectual) contributions.</p>
-<p><b>Note:</b> This site <i>should</i> work on most web browsers, though we have found that your mileage may vary on many government computers. If the site or graphics are not rendering, please try another browser (e.g., Firefox, Chrome, etc.).</p>
-<p><b>Credits:</b> Beyond the work of all individuals and organizations involved, we would like to note that the site itself was developed using: </p>
-  <ul>
-    <li><a href = "https://www.matrixds.com">Matrix DS</a></li>
-    <li><a href = 'https://rstudio.cloud'>R Studio Cloud</a></li>
-    <li>The <i>R</i> package <a href = "https://bookdown.org/">Bookdown</a></li>
-  </ul>
+<html>
+	<head>
+		<title>Design of Experiments for Simulation</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+        		<li><a href="/resources">Resources</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>About</h1>
+				    <p>This course was developed by analysts at TRAC Fort Leavenworth with assistance from the <a href = 'https://www.dscoe.org'>Data Science Center of Education (DSCOE)</a>and friends and peers throughout the Army analytic community.  It is intended to serve as a practical foundation in the statistical field of the design and analysis of experiments, specifically focused on supporting simulation development and analysis. It assumes basic familiarity with statistics and introduces programming in <a href = "https://www.r-project.org/about.html"><i>R</i></a>.  It is intended to be self paced, though organizations can work through it on a set schedule as desired.</p>
+            <p><b>Contact:</b> Please contact us with questions, comments, concerns, ideas, or (analytic and intellectual) contributions.</p>
+            <p><b>Note:</b> This site <i>should</i> work on most web browsers, though we have found that your mileage may vary on many government computers. If the site or graphics are not rendering, please try another browser (e.g., Firefox, Chrome, etc.).</p>
+            <p><b>Credits:</b> Beyond the work of all individuals and organizations involved, we would like to note that the site itself was developed using: </p>
+            <ul>
+               <li><a href = "https://www.matrixds.com">Matrix DS</a></li>
+               <li><a href = 'https://rstudio.cloud'>R Studio Cloud</a></li>
+               <li>The <i>R</i> package <a href = "https://bookdown.org/">Bookdown</a></li>
+            </ul>
+    </div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:jking@designofexperiments.org">email</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
