--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
 	<head>
 		<title>Design of Experiments for Simulation</title>
 	</head>
@@ -30,4 +31,4 @@
 			</ul>
 		</footer>
 	</body>
-</html>
+
