--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <body>
 	<div class="container">
     	<div class="blurb">
-		<h2><a href="/_book/index.html">Tutorial</a></h2>
+		<h2><a href="https://doe.dscoe.org/_book/index.html">Tutorial</a></h2>
 		<p> This is the main course.  It is frequently updated, so please check back for updates. As previously stated, please get involved with the community - if you have suggestions, note errors, or want to contribute, please contact us.</p>
 		
 		<h2>About</h2>
