--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	<div class="container">
     	<div class="blurb">
 		<h2>Tutorial</h2>
-		<p> <a href="https://doe.dscoe.org/_book/index.html">This is the main course.</a>  It is frequently updated, so please check back for updates. As previously stated, please get involved with the community - if you have suggestions, note errors, or want to contribute, please contact us.</p>
+		<p> <a href="https://doe.dscoe.org/_book/index.html">This is the main course.</a>  It is frequently updated, so please check back for updates. We encourage you to get involved with the community - if you have suggestions, note errors, or want to contribute, please contact us.</p>
 		
 		<h2>About</h2>
 		<p>This course was developed by analysts at TRAC Fort Leavenworth with assistance from the <a href = 'https://www.dscoe.org'>Data Science Center of Education (DSCOE)</a> and friends and peers throughout the Army analytic community.  It is intended to serve as a practical foundation in the statistical field of the design and analysis of experiments, specifically focused on supporting simulation development and analysis. It assumes basic familiarity with statistics and introduces programming in <a href = "https://www.r-project.org/about.html"><i>R</i></a>.  It is intended to be self paced, though organizations can work through it on a set schedule as desired.</p>
