--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 		
 		<h2>About</h2>
 		<p>This course was developed by analysts at TRAC Fort Leavenworth with assistance from the <a href = 'https://www.dscoe.org'>Data Science Center of Education (DSCOE)</a> and friends and peers throughout the Army analytic community.  It is intended to serve as a practical foundation in the statistical field of the design and analysis of experiments, specifically focused on supporting simulation development and analysis. It assumes basic familiarity with statistics and introduces programming in <a href = "https://www.r-project.org/about.html"><i>R</i></a>.  It is intended to be self paced, though organizations can work through it on a set schedule as desired.</p>
-            	<p><b>Contact:</b> Please contact us with questions, comments, concerns, ideas, or (analytic and intellectual) contributions. Our email address are at the bottom of the page.</p>
+            	<p><b>Contact:</b> Please contact us with questions, comments, concerns, ideas, or (analytic and intellectual) contributions. Our email addresses are at the bottom of the page.</p>
             	<p><b>Note:</b> This site <i>should</i> work on most web browsers, though we have found that your mileage may vary on many government computers. If the site or graphics are not rendering, please try another browser (e.g., Firefox, Chrome, etc.).</p>
             	<p><b>Credits:</b> Beyond the work of all individuals and organizations involved, we would like to note that the site itself was developed using: </p>
             	<ul>
