--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ layout: default
                		<li><a href = 'https://rstudio.cloud'>R Studio Cloud</a></li>
                		<li>The <i>R</i> package <a href = "https://bookdown.org/">Bookdown</a></li>
             	</ul>
+		
+		<h2>Sign Up</h2>
+		<p>Sign up here for notifications about updates to the course.</p>
+		<p>If you would like to stop receiving notifcations, simply sign up with the same email again and choose 'No' for being contacted.</p>
+		<hr>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdK-C3BgmUSzztZ19bmou35WK41n_2TFZ8MJMHmp7LXoBB76g/viewform?embedded=true" width="100%" height="853" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 			
 		<h2> Additional Resources </h2>
 		<p> There are many resources available for support in statistics, simulation, and programming.  Here are a few that you might not immediately find on google:
